--- a/.github/workflows/secret-key.yml
+++ b/.github/workflows/secret-key.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: hello world
+name: print-secretKey
 
 # Controls when the workflow will run
 on:
@@ -19,6 +19,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: secret.password 출력
+        env:
+          MY_PASSWORD: ${{ secrets.PASSWORD }}
+        run: echo My secret.PASSWORD is $MY_PASSWORD
+        
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
@@ -29,8 +34,5 @@ jobs:
         run: ls -al
       - name: first.js 파일 실행!
         run: node first.js
-        env:
-          MY_PASSWORD: ${{ secrets.PASSWORD }}
-      - name: secret.password 출력
-        run: echo My secret.PASSWORD is $MY_PASSWORD
+
         
