--- a/.github/workflows/secret-key.yml
+++ b/.github/workflows/secret-key.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: print-secretKey
+name: print-secretKey-2
 
 # Controls when the workflow will run
 on:
@@ -34,5 +34,13 @@ jobs:
         run: ls -al
       - name: first.js 파일 실행!
         run: node first.js
+      - name: checkout 내에서 secret.password 출력하기-1
+        run: echo My secret.PASSWORD is $MY_PASSWORD
+      
+      - name: checkout 내에서 secret.password 출력하기-2
+        env:
+          MY_PASSWORD2: ${{ secrets.PASSWORD }}
+        run: echo My secret.PASSWORD is $MY_PASSWORD2
+      
 
         
